syntax = "proto3";

package api.modelmanager.v1;

option go_package = "/api/modelmanager/v1;v1";
option java_multiple_files = true;
option java_package = "api.modelmanager.v1";

import "google/protobuf/timestamp.proto";



message Meta {
  string id = 1;
  string version = 2;
  string tenant = 3;
  string created_by_id = 4;
  string updated_by_id = 5;
  string created_by_name = 6;
  string updated_by_name = 7;
  google.protobuf.Timestamp created_time = 8;
  google.protobuf.Timestamp updated_time = 9;
}

enum AccessMode {
  READ_ONLY = 0;
  READ_WRITE = 1;
}

enum DataType {
  FLOAT64 = 0;
  BOOL = 1;
  STRING = 2;
  INT32 = 3;
  INT64 = 4;
  FLOAT32 = 5;

}