syntax = "proto3";

package api.modelmanager.v1;

option go_package = "/api/modelmanager/v1;v1";
option java_multiple_files = true;
option java_package = "api.modelmanager.v1";

import "google/api/annotations.proto";
import "meta.proto";

service ThingTypes {
  rpc CreateThingTypes (CreateThingTypesRequest) returns (CreateThingTypesReply) {
    option (google.api.http) = {
      post: "/model-manager/v1/thingTypes"
      body: "*"
    };
  }
  rpc UpdateThingTypes (UpdateThingTypesRequest) returns (UpdateThingTypesReply);
  rpc DeleteThingTypes (DeleteThingTypesRequest) returns (DeleteThingTypesReply);
  rpc GetThingTypes (GetThingTypesRequest) returns (GetThingTypesReply);
  rpc ListThingTypes (ListThingTypesRequest) returns (ListThingTypesReply);
}

message CreateThingTypesRequest {
  string name = 1;
  string parent_type_id = 2;
  string description = 3;
  map<string, Characteristic> characteristics = 4;
  map<string, PropertySet> property_sets = 5;
}
message CreateThingTypesReply {
  string name = 1;
  string tenant = 2;
  string parent_type_id = 3;
  string description = 4;
  map<string, Characteristic> characteristics = 5;
  map<string, PropertySet> property_sets = 6;
  Meta meta = 7;
}

message UpdateThingTypesRequest {}
message UpdateThingTypesReply {}

message DeleteThingTypesRequest {}
message DeleteThingTypesReply {}

message GetThingTypesRequest {}
message GetThingTypesReply {}

message ListThingTypesRequest {}
message ListThingTypesReply {}

message Characteristic {
  string name = 1;
  string unit = 2;
  string length = 3;
  string data_type = 4;
  string default_value = 5;
}

message PropertySet {
  map<string, property> properties = 1;
}

message property {
  string name = 1;              // 属性名称
  string unit = 2;              // 单位
  string value = 3;              // 属性值
  DataType data_type = 4;         // 数据类型
  AccessMode access_mode = 5;   // 访问模式
  string min = 6;                // 最小值
  string max = 7;                // 最大值
}
